Adding prettier back to package.json

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "node-sass": "^4.11.0",
         "node-sass-middleware": "^0.11.0"
     },
-    "devDependencies": {},
+    "devDependencies": {
+        "prettier": "^1.16.2"
+    },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
