--- a/package.json
+++ b/package.json
@@ -2,20 +2,24 @@
     "name": "brewerybrawl",
     "version": "1.0.0",
     "description": "Open Brewery DB app",
-    "main": "index.js",
+    "private": true,
     "dependencies": {
         "body-parser": "^1.18.3",
         "dotenv": "^6.2.0",
         "ejs": "^2.6.1",
         "express": "^4.16.4",
+        "lodash": "^4.17.11",
         "node-sass": "^4.11.0",
         "node-sass-middleware": "^0.11.0"
     },
     "devDependencies": {
-        "prettier": "^1.16.2"
+        "prettier": "^1.16.2",
+        "webpack": "^4.29.3",
+        "webpack-cli": "^3.2.3"
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "webpack"
     },
     "repository": {
         "type": "git",
