--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "webpack"
+        "build": "webpack --config webpack.config.js"
     },
     "repository": {
         "type": "git",
