--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
         "node-sass-middleware": "^0.11.0"
     },
     "devDependencies": {
+        "@babel/core": "^7.2.2",
+        "@babel/preset-env": "^7.3.1",
+        "babel-loader": "^8.0.5",
         "prettier": "^1.16.2",
         "webpack": "^4.29.3",
         "webpack-cli": "^3.2.3"
