--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
         "@babel/core": "^7.2.2",
         "@babel/preset-env": "^7.3.1",
         "babel-loader": "^8.0.5",
+        "nodemon": "^1.18.10",
         "prettier": "^1.16.2",
         "webpack": "^4.29.3",
         "webpack-cli": "^3.2.3"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "webpack --config webpack.config.js"
+        "build": "webpack --config webpack.config.js",
+        "start": "nodemon ./server.js"
     },
     "repository": {
         "type": "git",
