--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
         "dotenv": "^6.2.0",
         "ejs": "^2.6.1",
         "express": "^4.16.4",
+        "express-graphql": "^0.7.1",
+        "graphql": "^14.1.1",
         "lodash": "^4.17.11",
         "node-sass": "^4.11.0",
         "node-sass-middleware": "^0.11.0"
