--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
     "description": "Open Brewery DB app",
     "private": true,
     "dependencies": {
+        "apollo-server-express": "^2.4.2",
+        "axios": "^0.18.0",
         "body-parser": "^1.18.3",
         "dotenv": "^6.2.0",
         "ejs": "^2.6.1",
         "express": "^4.16.4",
         "express-graphql": "^0.7.1",
         "graphql": "^14.1.1",
+        "json-server": "^0.14.2",
         "lodash": "^4.17.11",
         "node-sass": "^4.11.0",
         "node-sass-middleware": "^0.11.0"
@@ -17,13 +20,19 @@
     "devDependencies": {
         "@babel/core": "^7.2.2",
         "@babel/preset-env": "^7.3.1",
+        "babel-cli": "^6.26.0",
         "babel-loader": "^8.0.5",
+        "babel-preset-env": "^1.7.0",
         "nodemon": "^1.18.10",
+        "npm-run-all": "^4.1.5",
         "prettier": "^1.16.2",
         "webpack": "^4.29.3",
         "webpack-cli": "^3.2.3"
     },
     "scripts": {
+        "dev": "npm-run-all --parallel dev:*",
+        "dev:api": "nodemon --exec 'babel-node index.js'",
+        "dev:json": "json-server --watch db.json",
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "webpack --config webpack.config.js",
         "start": "nodemon ./server.js"
