--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
         "apollo-server-express": "^2.4.2",
         "axios": "^0.18.0",
         "body-parser": "^1.18.3",
+        "cors": "^2.8.5",
         "dotenv": "^6.2.0",
         "ejs": "^2.6.1",
         "express": "^4.16.4",
         "express-graphql": "^0.7.1",
         "graphql": "^14.1.1",
+        "isomorphic-fetch": "^2.2.1",
         "json-server": "^0.14.2",
         "lodash": "^4.17.11",
         "node-sass": "^4.11.0",
